--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
   <p class="box1">The moon is moving away from the Earth at a tiny, although measurable, rate every year. 85 million years ago it was orbiting the Earth about 35 feet from the planet's surface. </p>
   <p class="box2">A "jiffy" is an actual unit of time: 1/100th of a second.</p>
 </div>
+<div class="container2">
+  <p>CSS is awesome </p>
+</div>
 </body>
 </html>
